Desarrollo funcionalidad mostrar productos para el administrador

--- a/src/main/resources/templates/productos/show.html
+++ b/src/main/resources/templates/productos/show.html
@@ -23,7 +23,6 @@
     <!-- Page Content -->
     <div class="container">
 
-
         <!-- Page Heading/Breadcrumbs -->
         <h1 class="mt-4 mb-3">
             Spring eCommerce <small>Productos</small>
@@ -38,24 +37,24 @@
         <h2>Productos</h2>
         <table class="table">
             <thead>
-            <tr>
-                <th scope="col">Nombre</th>
-                <th scope="col">Descripción</th>
-                <th scope="col">Inventario</th>
-                <th scope="col">Precio</th>
-                <th scope="col">Acción</th>
-                <th scope="col">Acción</th>
-            </tr>
+                <tr>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Descripción</th>
+                    <th scope="col">Inventario</th>
+                    <th scope="col">Precio</th>
+                    <th scope="col">Acción</th>
+                    <th scope="col">Acción</th>
+                </tr>
             </thead>
             <tbody>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td><a class="btn btn-warning" href="">Editar</a></td>
-                <td><a class="btn btn-danger" href="">Eliminar</a></td>
-            </tr>
+                <tr th:each="producto : ${productos}">
+                    <td th:text="${producto.nombre}"></td>
+                    <td th:text="${producto.descripcion}"></td>
+                    <td th:text="${producto.cantidad}"></td>
+                    <td th:text="${producto.precio}"></td>
+                    <td><a class="btn btn-warning" href="">Editar</a></td>
+                    <td><a class="btn btn-danger" href="">Eliminar</a></td>
+                </tr>
             </tbody>
         </table>
 
