--- a/src/main/resources/templates/usuario/resumenorden.html
+++ b/src/main/resources/templates/usuario/resumenorden.html
@@ -83,7 +83,7 @@
 
                     <ul class="list-group">
                         <li class="list-group-item"><h5 th:text=" 'Total: ' + ${orden.total}"></h5></li>
-                        <a class="btn btn-dark" href="#">Generar</a>
+                        <a class="btn btn-dark" th:href="@{saveOrder}">Generar</a>
                     </ul>
                 </div>
             </div>
