Desarrollo funcionalidad para buscar un producto por su nombre

--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <a class="navbar-brand" th:href="@{/}">Spring eCommerce</a>
 
-                <form action="#" class="form-inline my-2 my-lg-0"
+                <form th:action="@{/search}" class="form-inline my-2 my-lg-0"
                       method="post">
                     <input aria-label="Search" autocomplete="off"
                            class="form-control mr-sm-2" name="nombre" placeholder="Buscar"
