Implementacion template para usuario logueado

--- a/src/main/resources/templates/usuario/carrito.html
+++ b/src/main/resources/templates/usuario/carrito.html
@@ -20,8 +20,10 @@
 
 <body>
 
-  <!-- Navigation -->
-  <div th:include="usuario/template_usuario.html::header"></div>
+<!-- Navigation -->
+<div th:if="${sesion==null}" th:include="usuario/template_usuario.html::header"></div>
+
+<div th:unless="${sesion==null}" th:include="usuario/template_usuario.html::header-user"></div>
 
   <!-- Page Content -->
   <div class="container">
